# python-onboarding-guide

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  joshs_magic_setup.py  latest_penv_versions.py  pyproject.toml  tasks.py
.claude/: settings.local.json
.claude/agents/helper-scripts/: README.md  analyse-helper-scripts.md  create-helper-script.md  discover-helper-scripts.md  index-helper-scripts.md
.claude/commands/j/: arch.md  do.md  ffs.md  refactor-helper-scripts.md
.claude/hooks/: hogger.py  test_hogger.py
.claude/misc/: CODING_PRINCIPLES.md
containers/docker/: Dockerfile
dbt-project/: .sqlfluff  README.md  dbt_project.yml  packages.yml  profiles-snowflake.yml  pyproject.toml
dbt-project/.github/workflows/: dbt-cicd-dev.yml  dbt-cicd.yml
dbt-project/.github/workflows/scripts/: dbt-cicd-prod.py  dbt-cicd-test.yml  dbt_cicd.py
dbt-project/macros/: clean_slice.sql  data_environment.sql  generate_database_name.sql  generate_schema_name.sql  macros.yml
dbt-project/pytests/: conftest.py
dbt-project/pytests/macros/: test_macro_clean_slice.py  test_macro_data_environment.py  test_macro_generate_schema_name.py
guides/: ASTRAL_RUFF_UV.md  CODE_HOSPITALITY.md  CODE_REVIEW.md  CONTAINERS.md  DBT.md  DOCS_MKDOCS.md  GPG_COMMIT_SIGNING.md  IAC_CDK.md  INVOKE_COMMON_TASKS.md  MAKEFILES.md  MARKDOWN.md  PEM.md  PIPTOOLS.md  POETRY.md  PYENV.md  PYTEST.md  TESTCONTAINERS_PYTEST.md  TYPECHECKING.md  ZSH_GIT_BRANCH.md
scripts/: CLAUDE.md  CODING_PRINCIPLES.md  aws-sso.py  aws_diagrams_layout_examples.py  exportenv.py  injinja.py  yaml-check.py
scripts/mkdocs/: gen_ref_pages.py
src/python_onboarding_guide/: __main__.py  utils.py
tests/: conftest.py  test_example.py
