[tool.poetry]
name = "python-onboarding-guide"
version = "1.0.0"
description = "Mini blog / readme about python onboarding steps to get setup"
authors = ["Josh Peak <neozenith.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_onboarding_guide"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"


[tool.poetry.group.dev.dependencies]
md-toc = "^8.1.4"
invoke-common-tasks = {extras = ["all"], version = "^0.3.2"}
invoke = "^1.7.3"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
import_heading_stdlib = "Standard Library"
import_heading_firstparty = "Our Libraries"
import_heading_thirdparty = "Third Party"

[tool.mypy]
exclude = ["tests/", "tasks\\.py"]
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = "silent"
disallow_incomplete_defs = true
disallow_untyped_defs = false
strict = false

[tool.pytest]
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -vvv --color=yes --cov=. --no-cov-on-fail"

[tool.coverage]
[tool.coverage.run]
branch = true
omit = ["tests/*", "**/__init__.py", "tasks.py"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
