[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_onboarding_guide"
version = "1.0.0"
description = "Mini blog / readme about python onboarding steps to get setup"
authors = [{name = "Josh Peak", email = "neozenith.dev@gmail.com"}]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"

dependencies = [
    "md-toc"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
    "isort",
    "md-toc",
    "watchdog"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
homepage = "https://github.com/neozenith/python-onboarding-guide"
repository = "https://github.com/neozenith/python-onboarding-guide"
documentation = "https://github.com/neozenith/python-onboarding-guide"
