[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_onboarding_guide"
version = "1.0.0"
description = "Mini blog / readme about python onboarding steps to get setup"
authors = [{name = "Josh Peak", email = "neozenith.dev@gmail.com"}]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"

dependencies = [
    "md-toc"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
    "isort",
    "md-toc",
    "watchdog",
    "testcontainers",
    "aiohttp"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
homepage = "https://github.com/neozenith/python-onboarding-guide"
repository = "https://github.com/neozenith/python-onboarding-guide"
documentation = "https://github.com/neozenith/python-onboarding-guide"


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",# pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PTH", # falek8-use-pathlib 
    "TCH", # flake8-type-checking
    # "S", # flake8-bandit
    "C90", #mccabe
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 10


[tool.isort]
profile = "black"
multi_line_output = 3
import_heading_stdlib = "Standard Library"
import_heading_firstparty = "Our Libraries"
import_heading_thirdparty = "Third Party"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s -vvv --color=yes"

[tool.coverage.run]
omit = ["tests/*", "**/__init__.py", "tasks.py"]
branch = true

[tool.mypy]
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
exclude = [
  'tests/'
]
follow_imports = 'silent'
ignore_missing_imports = true

# Work your way up to these:
disallow_incomplete_defs = true
# disallow_untyped_defs = true 
# disallow_untyped_calls = true
# strict = true

